@@ -1,11 +1,11 @@
 Package: oligoClasses
-Version: 1.9.20
+Version: 1.9.21
 Title: Classes for high-throughput arrays supported by oligo
 Author: Benilton Carvalho <bcarvalh@jhsph.edu> and Robert Scharpf <rscharpf@jhsph.edu>
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu> 
-Depends:  Biobase, methods
+Depends:  Biobase, methods, IRanges (>= 1.5.21)
 Suggests: RSQLite
-Imports:  graphics, IRanges (>= 1.3.16), Biostrings (>= 2.13.9), Biobase (>= 2.7.0), affyio
+Imports:  graphics, Biostrings (>= 2.13.9), Biobase (>= 2.7.0), affyio
 Suggests: pd.genomewidesnp.6,
 	  pd.genomewidesnp.5,
 	  pd.mapping50k.hind240,
